--- a/force-app/main/default/classes/DemoController.cls
+++ b/force-app/main/default/classes/DemoController.cls
@@ -1,6 +1,7 @@
 public with sharing class DemoController {
     /**
      * An empty constructor for the testing
+     * Adding a test comment here
      */
     public DemoController() {}
 
